--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@apollo/client": "^3.4.1",
     "@react-native-async-storage/async-storage": "^1.15.5",
+    "@react-native-picker/picker": "^1.16.4",
     "date-fns": "^2.23.0",
     "dotenv": "^10.0.0",
     "expo": "~40.0.0",
